Bug 127406 - UI: Typeface and style names are not fully readable in GTK3
Summary: UI: Typeface and style names are not fully readable in GTK3
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.3.1.2 release
Hardware: All All
: medium trivial
Assignee: Heiko Tietze
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks: Writer-Styles-Paragraph-Combobox Fonts-Name-Combobox
  Show dependency treegraph
 
Reported: 2019-09-06 11:45 UTC by Toms
Modified: 2021-05-11 14:11 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Toms 2019-09-06 11:45:40 UTC
Description:
The typeface and style names are not fully readable in the toolbar when using GTK3 (on default GNOME/Adwaita at least) because of the tiny space left for the text.

For example, when using Liberation Serif only "Liberation S" is visible, making it hard to tell if it is "Sans" or "Serif", or even "Sans Narrow".

Steps to Reproduce:
1. Open LibreOffice Writer (or Calc)
2.
3.

Actual Results:
Only beginning of the typeface and style names visible.

Expected Results:
Typeface and Style names fully readable (if not extremely long).


Reproducible: Always


User Profile Reset: Yes



Additional Info:
I'd advice the space for typeface to be at least the size of the default Liberation Serif typeface name. Or a bit longer if possible.
In GTK2 "Liberation Sans Narrow" is readable as "Liberation Sans Na" making it perfectly usable.

The space for "Styles" should be wider due to styles having longer names in some languages. So if "Heading 1" is visible in English, it might be visible just partly (e.g. "Head..") in some other languages thus making it difficult to use styles (especially styles with longer custom names).
Comment 1 Xisco Faulí 2019-10-03 11:58:42 UTC
well, it's not only happening in gtk3... it also happens with long names like 'Latin Modern Mono'.
UX Team, any way this can be improved ?
Comment 2 Adolfo Jayme Barrientos 2019-10-04 17:12:37 UTC
Well, if would help if by default GNOME didn’t set its typeface to a ridiculous size of 12 (!) and Adwaita didn’t have so much of its excessive padding. This issue has nothing to do with GTK 2 vs. 3.

What we can do is ensure that the final part of the string is scrolled into view, so that its beginning is truncated instead of its end.
Comment 3 Toms 2019-10-04 17:22:02 UTC
Truncating the beginning instead of the end of the string is not an option, in my opinion, as it could create even more confusion

Can't we have the field a bit wider (as it is in the side panel already)? At least in those interfaces where it is possible... Or have a 'wide' and 'normal' length of the field option selectable in the toolbar settings.
Comment 4 Heiko Tietze 2019-10-05 07:15:18 UTC
(In reply to Toms from comment #3)
> Can't we have the field a bit wider...

How much? Approximately the size of one toolbar button seems to be okay to me.
Comment 5 Toms 2019-10-06 09:46:13 UTC
Yes, I agree. It seems fine if wider approximately by the size of one toolbar button.
Comment 6 Heiko Tietze 2019-10-07 10:11:18 UTC
So let's do it.
Comment 7 Heiko Tietze 2021-05-07 10:21:52 UTC
Patch at https://gerrit.libreoffice.org/c/core/+/115234 making font name dropdown +5 chars, style name +3.
Comment 8 Commit Notification 2021-05-11 14:11:54 UTC
Heiko Tietze committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8fa4371664108560dda438be8fc997d9cfe4bb6e

Resolves tdf#127406 - Font name and style name not readable

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.