Resolves tdf#127406 - Font name and style name not readable

Font name dropdown made 5 chars larger, style name +3

Change-Id: Ia37af6742cf7b754b25b9af18d7b29858634e5a8